# swagger/index.yaml
@@ -2,7 +2,7 @@ swagger: "2.0"
 info:
   title: dog-manager
   description: dog-manager test
-  version: 0.0.1
+  version: 0.0.2
 #host: localhost:3002
 schemes:
   - http
@@ -34,9 +34,9 @@ paths:
         - dog
       parameters:
         - name: dogKey
+          in: path
           type: string
           required: true
-          in: path
 
       responses:
         200:
@@ -54,7 +54,7 @@ paths:
         500:
           description: "Unexpected Exception : 알 수 없는 에러입니다."
 
-  /dog/setDogSoundType/dogKey/{soudnKey}:
+  /dog/setDogSoundType/{dogKey}/{soundKey}:
     post:
       summary: "반려견 울음 소리를 업로드합니다."
       description: "S3에 울음 소리를 업로드합니다"
@@ -62,13 +62,13 @@ paths:
         - dog
       parameters:
         - name: dogKey
+          in: path
           type: string
           required: true
-          in: path
         - name: soundKey
+          in: path
           type: string
           required: true
-          in: path
 
       responses:
         200:
@@ -122,13 +122,13 @@ paths:
         - dog
       parameters:
         - name: dogKey
+          in: path
           type: string
           required: true
-          in: path
         - name: soundKey
+          in: query
           type: string
           required: true
-          in: path
 
       responses:
         200:
@@ -256,3 +256,24 @@ paths:
             description: "Not Found : 파일이 없습니다."
           500:
             description: "Unexpected Exception : 알 수 없는 에러입니다."
+
+  /test:
+    get:
+      summary: "연결 상태 테스트"
+      description: "테스트"
+      tags:
+        - dog
+
+      responses:
+        200:
+          description: "연결 테스트 성공"
+          schema:
+            properties:
+              isStartMusic:
+                type: boolean
+        400:
+          description: "Bad Request : 요청이 잘못되었습니다."
+        404:
+          description: "Not Found : 파일이 없습니다."
+        500:
+          description: "Unexpected Exception : 알 수 없는 에러입니다."
